# swpatterns

./: .gitignore  Pipfile  README.md  setup.cfg
pytools/: __init__.py  composition.py
swpatterns/: __init__.py  composition.py  interface.py  matching.py
tests/: __init__.py  test_composition.py  test_interface.py  test_matching.py
