[metadata]
name = swpatterns
version = 0.1
description = A small collection of tools for software development in python.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tim Fischer
author_email = tim.fischer98@hotmail.com
url = https://github.com/tim-fi/swpatterns
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = swpatterns
